add database configs

--- a/conf/web.ini
+++ b/conf/web.ini
@@ -2,12 +2,6 @@
 ;; web.ini - configuration for ASL3-Usage web interface
 ;;
 ;;
-;; This is the customziation interface for the ASL3-Usage web
-;; interface. Only items listed below are considered customizable
-;; other than items that appears in style.css and will survive
-;; across updates. If you want to customize additional items
-;; please make a pull request against the project for consideration
-;;
 
 [web]
 ; Location of the password table
@@ -21,4 +15,16 @@
 ; the services listen on all addresses on the system.
 ; This can specify a single IP address.
 ;HTTP_BIND_ADDR = 
+
+; MariaDB server information
+; server name
+DB_HOST = localhost
+; server port
+DB_PORT = 3306
+; db user
+DB_USER = aslusage
+; db password
+DB_PASS = aslusage
+; database
+DB_DB = aslusage
 
